<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="10">

        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/img_sv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                app:srcCompat="@drawable/logo_haui_size" />
            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="2.5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:weightSum="5">

                <TextView
                    android:id="@+id/txt1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:textSize="12sp"
                    android:text="@string/m_sinh_vi_n" />

                <TextView
                    android:id="@+id/txt2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:textSize="12sp"
                    android:text="@string/l_p" />

                <TextView
                    android:id="@+id/txt3"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:textSize="12sp"
                    android:gravity="center_vertical"
                    android:text="@string/khoa_quan_l"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/txt4"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:textSize="12sp"
                    android:layout_height="0dp"
                    android:text="@string/s_d_t_i_kho_n" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:weightSum="5">

                <TextView
                    android:id="@+id/txt_masv"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:textSize="12sp"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/txt_lopsv"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:gravity="center_vertical"
                    android:textSize="12sp"
                    android:layout_weight="1"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/txt_khoasv"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="TextView"
                    android:gravity="center_vertical"
                    android:textSize="12sp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/txt_sodutk"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:textSize="12sp"
                    android:layout_height="0dp"
                    android:text="TextView" />
            </LinearLayout>

        </LinearLayout>
</LinearLayout>