<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_trang_chu"
        app:title="Trang Chủ"
        app:titleTextColor="#fff"
        android:background="#1565C0"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/txt_tensv"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:textSize="20dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="Trang chủ"
                ></TextView>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/custom_thongtinsv"
        android:backgroundTint="@color/white"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingTop="5dp"
        android:paddingRight="8dp"
        android:paddingBottom="5dp"
        android:weightSum="10">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_sv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:src="@drawable/logo_haui_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="7 "

            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="6dp"
            android:paddingRight="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="2dp"
                android:weightSum="10">

                <TextView
                    android:id="@+id/txt1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_vertical"
                    android:text="@string/m_sinh_vi_n"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txt_masv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:gravity="center_vertical"
                    android:text="1141250025"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="2dp"
                android:weightSum="10">

                <TextView
                    android:id="@+id/txt2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_vertical"
                    android:text="@string/l_p"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txt_lopsv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:gravity="center_vertical"
                    android:text="ĐH Công Nghệ KTMT 1"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"

                android:padding="2dp"
                android:weightSum="10">

                <TextView
                    android:id="@+id/txt3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_vertical"
                    android:text="@string/khoa_quan_l"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txt_khoasv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:gravity="center_vertical"
                    android:text="Khoa Điện Tử"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="2dp"
                android:weightSum="10">

                <TextView
                    android:id="@+id/txt4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_vertical"
                    android:text="@string/s_d_t_i_kho_n"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txt_sodutk"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:gravity="center_vertical"
                    android:text="1.800.000đ"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>